add route which takes file and doc_type correctly + some changes in checkers and doc model
